@@ -1,3 +1,9 @@
+2005-11-23  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Refactor the cursor handling, and wait 300ms before probing when a
+	new CD is detected.  Very evil hack around, but it works (#319403)
+
 2005-11-03  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
